Added details to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 Rodgers Mora Onchanah
+About
+Hi, I'm Rodgers.
+A passionate front developer. I am currently perfecting my skills on web development.
+Can't wait to be called a full stack developer!
+
+Experience
+I have workied with Javascript and I teach python coding in a school.
+
+Connect
+Email
+morarodgers@gmail.com
+Github
+https://github.com/morarodgers
+Facebook
+https://www.facebook.com/ronchanah
+Instagram
+https://instagram.com/rod.g_music
