Added index file with details

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 Rodgers Mora Onchanah
 About
 Hi, I'm Rodgers.
-A passionate front developer. I am currently perfecting my skills on web development.
+A passionate front-end developer. I am currently perfecting my skills on web development.
 Can't wait to be called a full stack developer!
 
 Experience
-I have workied with Javascript and I teach python coding in a school.
+I have worked with JavaScript and I teach Python coding in a school.
 
 Connect
 Email
