Added different html elements

--- a/index.html
+++ b/index.html
@@ -30,3 +30,5 @@
             <li><a href="https://instagram.com/rod.g_music" target="_blank">Instagram</a></li>
             </ul>
         </section>
+    </body>
+</html>
