Added different html elements

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <head>
         <title>Rodgers Mora Onchanah</title>
         <meta charset="UTF-8">
-        <meta name="index" content="My portfolio">
+        <meta name="description" content="Rodgers' portfolio">
         <meta name="author" content="Rodgers Mora Onchanah">
-        <meta http-equiv="refresh" content="30">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -23,11 +22,11 @@
         <section>
             <h1>Connect with me</h1>
             <ul style="list-style-type: none;">
-            <li><a href="mailto: morarodgers@gmail.com">Email</a></li>
-            <li><a href="https://github.com/morarodgers" target="_blank">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/morarodgers/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://www.facebook.com/ronchanah" target="_blank">Facebook</a></li>
-            <li><a href="https://instagram.com/rod.g_music" target="_blank">Instagram</a></li>
+                <li><a href="mailto:morarodgers@gmail.com">Email</a></li>
+                <li><a href="https://github.com/morarodgers" target="_blank">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/morarodgers/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/ronchanah" target="_blank">Facebook</a></li>
+                <li><a href="https://instagram.com/rod.g_music" target="_blank">Instagram</a></li>
             </ul>
         </section>
     </body>
