Added a js file index.js and some elements in index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <h1>Experience</h1>
             <p>I have worked with JavaScript and I teach Python coding in a school.</p>
         </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul></ul>
+        </section>
         <section>
             <h1>Connect with me</h1>
             <ul style="list-style-type: none;">
@@ -29,5 +33,7 @@
                 <li><a href="https://instagram.com/rod.g_music" target="_blank">Instagram</a></li>
             </ul>
         </section>
+        <footer></footer>
+        <script src="js/index.js"></script>
     </body>
 </html>
