--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
                 <li><a href="https://instagram.com/rod.g_music" target="_blank">Instagram</a></li>
             </ul>
         </section>
+        <section>
+            <h2>Leave a message</h2>
+            <form>
+                <label>Name </label><br>
+                <input type="text" name="usersName" required="true"><br>
+                <label>Email </label><br>
+                <input type="email" name="usersEmail" required="true"><br>
+                <label>Message </label><br>
+                <textarea name="usersMessage" required="true"></textarea><br>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+        <section id="messages">
+            <h2>Messages</h2>
+            <ul></ul>
+        </section>
         <footer></footer>
         <script src="js/index.js"></script>
     </body>
