Added a message list in the index.js and added a stylesheet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Rodgers' portfolio">
         <meta name="author" content="Rodgers Mora Onchanah">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/index.css" >
     </head>
     <body>
         <section>
@@ -35,7 +36,7 @@
         </section>
         <section>
             <h2>Leave a message</h2>
-            <form>
+            <form name="leave_message">
                 <label>Name </label><br>
                 <input type="text" name="usersName" required="true"><br>
                 <label>Email </label><br>
