Added Edit buto to edit messages

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <h2>Leave a message</h2>
             <form name="leave_message">
                 <label>Name </label><br>
-                <input type="text" name="usersName" required="true"><br>
+                <input type="text" name="usersName" required="true" placeholder="Type your name here"><br>
                 <label>Email </label><br>
-                <input type="email" name="usersEmail" required="true"><br>
+                <input type="email" name="usersEmail" required="true" placeholder="Type your email address here"><br>
                 <label>Message </label><br>
-                <textarea name="usersMessage" required="true"></textarea><br>
+                <textarea name="usersMessage" required="true" placeholder="Type your message"></textarea><br>
                 <button type="submit">Submit</button>
             </form>
         </section>
