Added more styles in the stylesheet and an image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/index.css" >
     </head>
     <body>
+        <img src="images/portfolio.jpg">
         <section>
             <h1>About</h1>
             <p>Hi, I'm Rodgers.</p>
@@ -35,22 +36,22 @@
             </ul>
         </section>
         <section>
-            <h2>Leave a message</h2>
+            <h2 class="font-effect-emboss">Leave a message</h2>
             <form name="leave_message">
                 <label>Name </label><br>
                 <input type="text" name="usersName" id="username" required="true" placeholder="Type your name here"><br>
                 <label>Email </label><br>
                 <input type="email" name="usersEmail" id="useremail" required="true" placeholder="Type your email address here"><br>
                 <label>Message </label><br>
-                <textarea name="usersMessage" id="usermessage" required="true" placeholder="Type your message"></textarea><br>
+                <textarea name="usersMessage" required="true" placeholder="Type your message"></textarea><br>
                 <button type="submit">Submit</button>
             </form>
         </section>
         <section id="messages">
-            <h2>Messages</h2>
+            <h2 class="font-effect-fire">Messages</h2>
             <ul></ul>
         </section>
-        <footer></footer>
+        <footer class="font-effect-neon"></footer>
         <script src="js/index.js"></script>
     </body>
 </html>
