Added some animation effect on the links

--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
     </head>
     <body>
         <header>
-            <div class='header'>
-                <div>
-                    <img src="images/portfolio.jpg">
-                    <span class="me">Rodgers Mora Onchanah</span>
-                </div>
-                <ul class='menu'>
-                    <li class="menu-item"><a href='#about'>About</a></li>
-                    <li class="menu-item"><a href='#experience'>Experience</a></li>
-                    <li class="menu-item"><a href='#skils'>Skills</a></li>
-                    <li class="menu-item"><a href='#connect'>Connect</a></li>
-                    <li class="menu-item"><a href='#contact'>Contact</a></li>
-                </ul>
+            <div>
+                <img src="images/portfolio.jpg">
+                <span class="me">Rodgers Mora Onchanah</span>
             </div>
+            <ul class='menu'>
+                <li class="menu-item"><a href='#about'>About</a></li>
+                <li class="menu-item"><a href='#experience'>Experience</a></li>
+                <li class="menu-item"><a href='#skils'>Skills</a></li>
+                <li class="menu-item"><a href='#connect'>Connect</a></li>
+                <li class="menu-item"><a href='#contact'>Contact</a></li>
+            </ul>
         </header>
         <div class="content">
             <section>
@@ -42,7 +40,7 @@
                 <a id="skils"><h2>Skills</h2></a>
                 <ul></ul>
             </section>
-            <section>
+            <section class="connect">
                 <a id="connect"><h1>Connect with me</h1></a>
                 <ul style="list-style-type: none;">
                     <li><a href="mailto:morarodgers@gmail.com">Email</a></li>
