Added projects section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <a id="skils"><h2>Skills</h2></a>
                 <ul></ul>
             </section>
+            <section id="projects">
+                <h2>Projects</h2>
+                <ul></ul>
+
+            </section>
             <section class="connect">
                 <a id="connect"><h1>Connect with me</h1></a>
                 <ul style="list-style-type: none;">
