Added fetch API

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li class="menu-item"><a href='#about'>About</a></li>
                 <li class="menu-item"><a href='#experience'>Experience</a></li>
                 <li class="menu-item"><a href='#skils'>Skills</a></li>
+                <li class="menu-item"><a href='#myprojects'>Projects</a></li>
                 <li class="menu-item"><a href='#connect'>Connect</a></li>
                 <li class="menu-item"><a href='#contact'>Contact</a></li>
             </ul>
@@ -39,6 +40,11 @@
             <section id="skills">
                 <a id="skils"><h2>Skills</h2></a>
                 <ul></ul>
+            </section>
+            <section id="projects">
+                <a id="myprojects"><h2>Projects</h2></a>
+                <ul></ul>
+
             </section>
             <section class="connect">
                 <a id="connect"><h1>Connect with me</h1></a>
