Adjusted the line indentations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="images/portfolio.jpg">
                 <span class="me">Rodgers Mora Onchanah</span>
             </div>
-            <ul class='menu'>
+            <ul class="menu">
                 <li class="menu-item"><a href='#about'>About</a></li>
                 <li class="menu-item"><a href='#experience'>Experience</a></li>
                 <li class="menu-item"><a href='#skils'>Skills</a></li>
