--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html  lang="en">
     <head>
         <title>Rodgers Mora Onchanah</title>
         <meta charset="UTF-8">
@@ -12,26 +12,26 @@
     <body>
         <header>
             <div>
-                <img src="images/portfolio.jpg">
+                <img src="images/portfolio.jpg" alt="Profile image">
                 <span class="me">Rodgers Mora Onchanah</span>
             </div>
             <ul class="menu">
-                <li class="menu-item"><a href='#about'>About</a></li>
-                <li class="menu-item"><a href='#experience'>Experience</a></li>
-                <li class="menu-item"><a href='#skils'>Skills</a></li>
-                <li class="menu-item"><a href='#myprojects'>Projects</a></li>
-                <li class="menu-item"><a href='#connect'>Connect</a></li>
-                <li class="menu-item"><a href='#contact'>Contact</a></li>
+                <li class="menu-item"><a href="#about">About</a></li>
+                <li class="menu-item"><a href="#experience">Experience</a></li>
+                <li class="menu-item"><a href="#skils">Skills</a></li>
+                <li class="menu-item"><a href="#myprojects">Projects</a></li>
+                <li class="menu-item"><a href="#connect">Connect</a></li>
+                <li class="menu-item"><a href="#contact">Contact</a></li>
             </ul>
         </header>
         <div class="content">
             <section>
-                <a id="about"><h1>About</h1></a>
+                <a id="about"><h2>About</h2></a>
                 <p>A passionate front-end developer. I am currently perfecting my skills on web development.</p>
                 <p>Can't wait to be called a full stack developer!</p>
             </section>
             <section>
-                <a id="experience"><h1>Experience</h1></a>
+                <a id="experience"><h2>Experience</h2></a>
                 <ul class="experience">
                     <li>Computer science teacher - Premier Academy</li>
                     <li>Coding teacher - Premier Academy</li>
@@ -44,10 +44,9 @@
             <section id="projects">
                 <a id="myprojects"><h2>Projects</h2></a>
                 <ul></ul>
-
             </section>
             <section class="connect">
-                <a id="connect"><h1>Connect with me</h1></a>
+                <a id="connect"><h2>Connect with me</h2></a>
                 <ul style="list-style-type: none;">
                     <li><a href="mailto:morarodgers@gmail.com">Email</a></li>
                     <li><a href="https://github.com/morarodgers" target="_blank">Github</a></li>
@@ -63,17 +62,17 @@
                         <div class="row">
                             <div class="item">
                                 <label class="field-label">Name </label>
-                                <input class="field-input" type="text" name="usersName" id="username" required="true" placeholder="Type your name here">
+                                <input class="field-input" type="text" name="usersName" id="username" placeholder="Type your name here" required>
                             </div>
                             <div class="item">
                                 <label class="field-label">Email </label>
-                                <input class="field-input" type="email" name="usersEmail" id="useremail" required="true" placeholder="Type your email address here">
+                                <input class="field-input" type="email" name="usersEmail" id="useremail" placeholder="Type your email address here" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="item">
                                 <label class="field-label">Message </label>
-                                <textarea class="field-input" name="usersMessage" required="true" placeholder="Type your message"></textarea>
+                                <textarea class="field-input" name="usersMessage" placeholder="Type your message" required></textarea>
                             </div>
                         </div>
                         <div class="row">
