Edited media queries and indentation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html  lang="en">
+<html lang="en">
     <head>
         <title>Rodgers Mora Onchanah</title>
         <meta charset="UTF-8">
@@ -47,7 +47,7 @@
             </section>
             <section class="connect">
                 <a id="connect"><h2>Connect with me</h2></a>
-                <ul style="list-style-type: none;">
+                <ul class="connect">
                     <li><a href="mailto:morarodgers@gmail.com">Email</a></li>
                     <li><a href="https://github.com/morarodgers" target="_blank">Github</a></li>
                     <li><a href="https://www.linkedin.com/in/morarodgers/" target="_blank">LinkedIn</a></li>
