Edited media queries and form display

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </section>
             <section id="messages">
                 <h2 class="font-effect-fire">Messages</h2>
-                <ul></ul>
+                <ul class="messages"></ul>
             </section>
 
         </div>
