--- a/index.html
+++ b/index.html
@@ -10,84 +10,86 @@
         <link rel="stylesheet" href="css/index.css" >
     </head>
     <body>
-        <header>
-            <div>
-                <img src="images/portfolio.jpg" alt="Profile image">
-                <span class="me">Rodgers Mora Onchanah</span>
+        <div class="main">
+            <header>
+                <div>
+                    <img src="images/portfolio.jpg" alt="Profile image">
+                    <span class="me">Rodgers Mora Onchanah</span>
+                </div>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#about">About</a></li>
+                    <li class="menu-item"><a href="#experience">Experience</a></li>
+                    <li class="menu-item"><a href="#skils">Skills</a></li>
+                    <li class="menu-item"><a href="#myprojects">Projects</a></li>
+                    <li class="menu-item"><a href="#connect">Connect</a></li>
+                    <li class="menu-item"><a href="#contact">Contact</a></li>
+                </ul>
+            </header>
+            <div class="content">
+                <section>
+                    <a id="about"><h2>About</h2></a>
+                    <p>A passionate front-end developer. I am currently perfecting my skills on web development.</p>
+                    <p>Can't wait to be called a full stack developer!</p>
+                </section>
+                <section>
+                    <a id="experience"><h2>Experience</h2></a>
+                    <ul class="experience">
+                        <li>Computer science teacher - Premier Academy</li>
+                        <li>Coding teacher - Premier Academy</li>
+                    </ul>
+                </section>
+                <section id="skills">
+                    <a id="skils"><h2>Skills</h2></a>
+                    <ul></ul>
+                </section>
+                <section id="projects">
+                    <a id="myprojects"><h2>Projects</h2></a>
+                    <ul></ul>
+                </section>
+                <section class="connect">
+                    <a id="connect"><h2>Connect with me</h2></a>
+                    <ul class="connect">
+                        <li><a href="mailto:morarodgers@gmail.com">Email</a></li>
+                        <li><a href="https://github.com/morarodgers" target="_blank">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/morarodgers/" target="_blank">LinkedIn</a></li>
+                        <li><a href="https://www.facebook.com/ronchanah" target="_blank">Facebook</a></li>
+                        <li><a href="https://instagram.com/rod.g_music" target="_blank">Instagram</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <a id="contact"><h2 class="font-effect-emboss">Leave a message</h2></a>
+                    <form name="leave_message">
+                        <div class="form-body">
+                            <div class="row">
+                                <div class="item">
+                                    <label class="field-label">Name </label>
+                                    <input class="field-input" type="text" name="usersName" id="username" placeholder="Type your name here" required>
+                                </div>
+                                <div class="item">
+                                    <label class="field-label">Email </label>
+                                    <input class="field-input" type="email" name="usersEmail" id="useremail" placeholder="Type your email address here" required>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="item">
+                                    <label class="field-label">Message </label>
+                                    <textarea class="field-input" name="usersMessage" placeholder="Type your message" required></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <button class="button" type="submit">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </section>
+                <section id="messages">
+                    <h2 class="font-effect-fire">Messages</h2>
+                    <ul class="messages"></ul>
+                </section>
+    
             </div>
-            <ul class="menu">
-                <li class="menu-item"><a href="#about">About</a></li>
-                <li class="menu-item"><a href="#experience">Experience</a></li>
-                <li class="menu-item"><a href="#skils">Skills</a></li>
-                <li class="menu-item"><a href="#myprojects">Projects</a></li>
-                <li class="menu-item"><a href="#connect">Connect</a></li>
-                <li class="menu-item"><a href="#contact">Contact</a></li>
-            </ul>
-        </header>
-        <div class="content">
-            <section>
-                <a id="about"><h2>About</h2></a>
-                <p>A passionate front-end developer. I am currently perfecting my skills on web development.</p>
-                <p>Can't wait to be called a full stack developer!</p>
-            </section>
-            <section>
-                <a id="experience"><h2>Experience</h2></a>
-                <ul class="experience">
-                    <li>Computer science teacher - Premier Academy</li>
-                    <li>Coding teacher - Premier Academy</li>
-                </ul>
-            </section>
-            <section id="skills">
-                <a id="skils"><h2>Skills</h2></a>
-                <ul></ul>
-            </section>
-            <section id="projects">
-                <a id="myprojects"><h2>Projects</h2></a>
-                <ul></ul>
-            </section>
-            <section class="connect">
-                <a id="connect"><h2>Connect with me</h2></a>
-                <ul class="connect">
-                    <li><a href="mailto:morarodgers@gmail.com">Email</a></li>
-                    <li><a href="https://github.com/morarodgers" target="_blank">Github</a></li>
-                    <li><a href="https://www.linkedin.com/in/morarodgers/" target="_blank">LinkedIn</a></li>
-                    <li><a href="https://www.facebook.com/ronchanah" target="_blank">Facebook</a></li>
-                    <li><a href="https://instagram.com/rod.g_music" target="_blank">Instagram</a></li>
-                </ul>
-            </section>
-            <section>
-                <a id="contact"><h2 class="font-effect-emboss">Leave a message</h2></a>
-                <form name="leave_message">
-                    <div class="form-body">
-                        <div class="row">
-                            <div class="item">
-                                <label class="field-label">Name </label>
-                                <input class="field-input" type="text" name="usersName" id="username" placeholder="Type your name here" required>
-                            </div>
-                            <div class="item">
-                                <label class="field-label">Email </label>
-                                <input class="field-input" type="email" name="usersEmail" id="useremail" placeholder="Type your email address here" required>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="item">
-                                <label class="field-label">Message </label>
-                                <textarea class="field-input" name="usersMessage" placeholder="Type your message" required></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <button class="button" type="submit">Submit</button>
-                        </div>
-                    </div>
-                </form>
-            </section>
-            <section id="messages">
-                <h2 class="font-effect-fire">Messages</h2>
-                <ul class="messages"></ul>
-            </section>
-
+            <footer class="font-effect-neon"></footer>
+            <script src="js/index.js"></script>
         </div>
-        <footer class="font-effect-neon"></footer>
-        <script src="js/index.js"></script>
     </body>
 </html>
