--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </section>
                 <section id="projects">
                     <a id="myprojects"><h2>Projects</h2></a>
-                    <ul></ul>
+                    <ul class="projects"></ul>
                 </section>
                 <section class="connect">
                     <a id="connect"><h2>Connect with me</h2></a>
@@ -66,7 +66,7 @@
                                     <input class="field-input" type="text" name="usersName" id="username" placeholder="Type your name here" required>
                                 </div>
                                 <div class="item">
-                                    <label class="field-label">Email </label>
+                                    <label class="field-label">Email address </label>
                                     <input class="field-input" type="email" name="usersEmail" id="useremail" placeholder="Type your email address here" required>
                                 </div>
                             </div>
