Changed name position

--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
         <div class="content">
             <section>
                 <a id="about"><h2>About</h2></a>
-                <p>A passionate front-end developer. I am currently perfecting my skills on web development.</p>
-                <p>Can't wait to be called a full stack developer!</p>
+                <p>I am a passionate teacher and learner.
+                    I am currently perfecting my skills on web development.
+                </p>
             </section>
             <section>
                 <a id="experience"><h2>Experience</h2></a>
                 <ul class="experience">
+                    <li>Code the Dream Bootcamp. Learning advanced HTML, CSS, and JavaScript concepts.</li>
                     <li>Computer science teacher - Premier Academy</li>
                     <li>Coding teacher - Premier Academy</li>
+                    <li>Maths teacher - Premier Academy</li>
                 </ul>
             </section>
             <section id="skills">
